# ritmdrc-amos

./: .gitignore  .rosinstall
amos_base/: CMakeLists.txt  mainpage.dox  manifest.xml
amos_base/config/: base.launch
amos_base/include/: base.h
amos_base/src/: base.cpp  main.cpp
amos_nav2d/: amcl_diff.launch  amos_configuration.launch  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch
amos_tf/: CMakeLists.txt  mainpage.dox  manifest.xml
amos_tf/src/: amos_tf.cpp
common/dynamicgrid/: Makefile  mainpage.dox  manifest.xml
common/dynparam/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
hardware/base/: Makefile  base.elf  base.hex  mainpage.dox  manifest.xml
hardware/base_msgs/: mainpage.dox  manifest.xml
hardware/compass/: CMakeLists.txt  Makefile  cmake_install.cmake  compass.elf  compass.hex  manifest.xml
hardware/compass_msg/: Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
hardware/imu/: CMakeLists.txt  Makefile  cmake_install.cmake  imu.elf  imu.hex  mainpage.dox  manifest.xml
hardware/imu_msg/: cmake_install.cmake  mainpage.dox  manifest.xml
igvc/gps_convert/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
igvc/igvc/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
laser_fix/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
laser_fix/src/: main.cpp
launch/: arduino.launch  base.launch  base_frames.launch  camera.launch  goal_republish.launch  gps.launch  igvc.launch  lane.launch  lane_nav.launch  mainpage.dox  manifest.xml  map.launch  nav.launch  qual-waypt.launch  sensors.launch
speech/: Makefile  mainpage.dox
speech/src/: speech.cpp
tools/dt/: Makefile  (+3 more)
vision/linedetect/: CMakeLists.txt  mainpage.dox  manifest.xml
vision/linedetect/src/: image_proc.cpp  image_proc.h  main.cpp
(+152 files in other folders)
